# languagetool

./: .circleci.settings.xml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .platform.app.yaml  .project  .slugignore  .travis.yml  .trivyignore  COPYING.txt  Dockerfile.neuris  Ecoderportalbranch.io  EnglishWordRepeatRule.java  Fireworksci.io  Procfile  README.md  TODO.niseimhiu  TODO.seimhiu  TODO.uru  app.json  arabic-grammar.xml  build-zip.sh  build.gradle  build.sh  create_release.sh  create_snapshot.sh  deploy-modules.sh  deploy_release.sh  dev-readme.md  do_release.sh  et off  flake.nix  inabairt.pl  incor.pl  install.sh  install.sh.DIGESTS  local_history.patch  (+19 more)
.circleci/: build-config.yml  config.yml  continue-config.yml  kick_off_premium.sh  test-and-deploy-modules.sh
.platform/: routes.yaml
hunspell-native-libs/: .classpath  .project  build.gradle  pom.xml  pom.xml.original
languagetool-client-example/: build-opensource.sh  build.gradle  pom.xml  pom.xml.original
languagetool-commandline/: .classpath  .project  build.gradle  pom.xml
languagetool-core/: .classpath  .project  CHANGES.txt  README.txt  build.gradle  pom.xml  pom.xml.original
languagetool-dev/: build.gradle  pom.xml
languagetool-docker/: .dockerignore  Dockerfile  README_docker.md  docker-compose.yml
languagetool-gui-commons/: .classpath  .project  build.gradle  pom.xml
trunk/languagetool/kword/language/: ConfigDialog.cc  ConfigDialog.h  Makefile  Makefile.am  Makefile.in  README  TODO  languagetool.desktop  main.cc  main.h
(+48305 files in other folders)
